fixed projects css on small screen

--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -1,14 +1,24 @@
 .project {
-    background-color: rgb(255, 255, 255);
-    height: 100px;
-  }
+  background-color: rgb(255, 255, 255);
+  height: 100px;
+}
+
+.project-icon {
+  height: 100px;
+}
+
+.project-icon-img {
+  width: auto;
+  height: 100%;
+}
   
-  .project-icon {
-    height: 100px;
-  }
+.hovered:hover {
+  box-shadow: 0px 0px 50px #000000;
+}
   
-  .project-icon-img {
-    width: auto;
-    height: 100%;
+@media only screen and (max-width: 1199px) {
+  .projects {
+    padding-left: 200px;
+    padding-right: 200px;
   }
-  
+}
